cambio porcentaje texto uno

--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,8 @@ army green: 41521F;
 
 }
 .save{
-	margin-top:350px;
-	margin-left: 75px;
+	margin-top:80%;
+	margin-left: 30%;
 	color: white;
 	font-weight: bold;
 	
